# compiler

./: .gitignore  ANSI-C.l  CMakeLists.txt  README.md  convertTestDotToPDF.sh  makefile  miniC.y  testparse.txt
.cache/clangd/index/: CallTree.c.28FAC4D5AA8EE36D.idx  CallTree.h.7DFDB397CEC9D83D.idx  CallTree.h.CCADE25C03F2603A.idx  HashTable.c.1B7F7A35490BE041.idx  HashTable.c.1E8561C0F58E2E30.idx  HashTable.h.4C15B8375A37AB48.idx  HashTable.h.C75B6B087E53B17E.idx  functionHashTable.c.7EEDF96F0C68E2FF.idx  functionHashTable.h.270574A052ACF8E5.idx  lex.yy.c.5A62F28B143047BD.idx  lex.yy.c.67AABA3F9FF6192B.idx  main.c.64CD264DD2688428.idx  y.tab.c.684EC24DADCD090C.idx  y.tab.c.837C8864A9A03662.idx  y.tab.h.D22038D9DC2A2BEE.idx  y.tab.h.E7ACA682E202AD65.idx
Tests/: add.c  variables.c
myTests/: function-not-exists.c  function-too-many-args.c  functions.c  tab-multi.c  tab.c
myTests/expressions/: expression-error.c  expression.c
myTests/functions/: function-too-few-args.c  function-too-many-args.c  functions.c
myTests/loops/: loops.c
myTests/variables/: variables-bloc-error-1.c  variables-bloc-error-2.c  variables-error-1.c  variables-error-2.c  variables.c
other/test/: test  test.c  test.h  test.l  testfile
src/: ANSI-C.l  lex.yy.c  main.c  makefile  miniC.y  output.dot  y.tab.c  y.tab.h
src/callTree/: CallTree.c  CallTree.h
src/functionHashTable/: functionHashTable.c  functionHashTable.h
src/hashTable/: HashTable.c  HashTable.h
tests/: Lisezmoi.txt  functions.c  switch.c  variables.c
